# mpygui

./: .gitignore  README.md  flake.nix  logger.py  mPyGUI.spec  main.py  pyproject.toml  requirements.txt  setup.py  theme_manager.py
app/: ctk_custom_listbox.py  splitter.py  theme_manager.py  utils.py
src/common/QtExtensions/: FileDropList.py  __init__.py
src/common/ctk_extensions/themes/: theme_manager.py
src/common/ctk_extensions/widgets/: __init__.py
src/common/logger/: logger.py
src/mpygui/: __main__.py  launch.py
src/mpygui/app/: gui.py
