[build-system]
requires = ["setuptools==70.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpygui"
version = "0.1.0"
description = "The ffmpeg GUI (Python Edition)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter==5.2.2",
    "tkinterdnd2==0.4.3",
    "CTkListbox==1.5",
]

[project.optional-dependencies]
build = [
    "py2app==0.28.8; sys_platform == 'darwin'",
    "pyinstaller; sys_platform != 'darwin'"
]

[tool.setuptools.package-data]
"common.ctk_extensions.themes.resources" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]
