[build-system]
requires = ["setuptools==70.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpygui"
version = "0.1.0"
description = "The ffmpeg GUI (Python Edition)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["PySide6==6.9.3", "qt-material==2.17", "darkdetect==0.8.0"]

[tool.setuptools.packages.find]
where = ["src"]
